--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -4215,6 +4215,24 @@ pipelines:
       - datasets/MD_SLS_DOC_HIER
     subgraphs: []
     dependencies: {}
+  pipelines/SAP_MD_SLS_DOC_HIER_HM2:
+    name: SAP_MD_SLS_DOC_HIER_HM2
+    description: ''
+    author: mbolado1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-06-16 14:06:19'
+    modifiedAt: '2023-06-16 14:26:11'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_01_VBAK
+      - datasets/DS_SAP_01_VBAP
+      - datasets/DS_SAP_01_VBFA
+      outputs:
+      - datasets/MD_SLS_DOC_HIER
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
@@ -5001,7 +5019,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-06-16 13:14:27'
+    modifiedAt: '2023-06-16 14:19:59'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
