JEKT-2182 JDE Pipeline Development started ❇️ New     - Pipeline        - JDE_MD_SLS_DOC_HIER_GMD_BW2_DEU_DJD_JEM_JET_JSW_MTR_SJD_JES     - Dataset        - DS_JDE_01_F42119

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -4233,6 +4233,22 @@ pipelines:
       - datasets/MD_SLS_DOC_HIER
     subgraphs: []
     dependencies: {}
+  pipelines/JDE_MD_SLS_DOC_HIER_GMD_BW2_DEU_DJD_JEM_JET_JSW_MTR_SJD_JES:
+    name: JDE_MD_SLS_DOC_HIER_GMD_BW2_DEU_DJD_JEM_JET_JSW_MTR_SJD_JES
+    description: ''
+    author: mbolado1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-06-16 14:32:40'
+    modifiedAt: '2023-06-16 14:53:17'
+    datasets:
+      inputs:
+      - datasets/DS_JDE_01_F42119
+      outputs:
+      - datasets/MD_SLS_DOC_HIER
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
@@ -10399,6 +10415,21 @@ datasets:
         author: mbolado1@its.jnj.com
         createdAt: '2023-06-15 17:53:57'
         modifiedAt: '2023-06-15 17:53:57'
+  datasets/DS_JDE_01_F42119:
+    name: DS_JDE_01_F42119
+    description: ''
+    author: mbolado1@its.jnj.com
+    createdAt: '2023-06-16 14:39:40'
+    modifiedAt: '2023-06-16 14:39:40'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: mbolado1@its.jnj.com
+        createdAt: '2023-06-16 14:39:40'
+        modifiedAt: '2023-06-16 14:39:40'
 templates: {}
 jobs:
   jobs/DEV_ATL_PIPELINE_JOB:
