JEKT-2182 Job creation and src_sys added ❇️ New     - Job        - JOB_MD_SLS_DOC_HIER

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -13393,6 +13393,33 @@ jobs:
     createdAt: '2023-04-26 17:13:45'
     modifiedAt: '2023-05-26 15:36:36'
     author: skostadi@its.jnj.com
+  jobs/JOB_MD_SLS_DOC_HIER:
+    name: JOB_MD_SLS_DOC_HIER
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 1/1 * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/JDE_MD_SLS_DOC_HIER_GMD_BW2_DEU_DJD_JEM_JET_JSW_MTR_SJD_JES
+    - pipelines/SAP_MD_SLS_DOC_HIER_BBA_BBL_BBN_MBP_HCS_GEU_MRS_TAI_SVS_BWI_P01_ATL_FSN_HM2
+    - pipelines/SAP_MD_SLS_DOC_HIER_HM2
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-06-16 19:39:04'
+    modifiedAt: '2023-06-16 19:57:15'
+    author: mbolado1@its.jnj.com
 functions:
   author: null
   createdAt: '2023-03-24 15:42:34'
