JEKT-2182 Add 2 spark expressions to SAP Pipeline #1 config 🔁 Modified     - Pipeline        - SAP_MD_SLS_DOC_HIER_BBA_BBL_BBN_MBP_HCS_GEU_MRS_TAI_SVS_BWI_P01_ATL_FSN     - Dataset        - MD_SLS_DOC_HIER        - DS_SAP_01_VBFA

--- a/src/datasets/DS_SAP_01_VBFA/pbt_aspects.yml
+++ b/src/datasets/DS_SAP_01_VBFA/pbt_aspects.yml
@@ -2,14 +2,14 @@ version: 1
 schema:
   type: struct
   fields:
-  - name: MANDT
+  - name: _deleted_
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: RUUID
+  - name: VBTYP_N
     type: string
     nullable: true
     metadata:
@@ -23,14 +23,14 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: POSNV
+  - name: VBELN
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: VBELN
+  - name: POSNV
     type: string
     nullable: true
     metadata:
@@ -44,7 +44,7 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: VBTYP_N
+  - name: MANDT
     type: string
     nullable: true
     metadata:
@@ -136,6 +136,13 @@ schema:
       mappings: []
       tags: []
   - name: PLART
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: STUFE
     type: string
     nullable: true
     metadata:
@@ -289,14 +296,14 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: STUFE
+  - name: VBTYPEXT_V
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: _DATAAGING
+  - name: VBTYPEXT_N
     type: string
     nullable: true
     metadata:
@@ -338,7 +345,7 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: _deleted_
+  - name: _infa_bigint_sequence_
     type: string
     nullable: true
     metadata:
