--- a/src/datasets/MD_SLS_DOC_HIER/pbt_aspects.yml
+++ b/src/datasets/MD_SLS_DOC_HIER/pbt_aspects.yml
@@ -18,14 +18,14 @@ schema:
       tags: []
   - name: PREV_DOC_NUM
     type: string
-    nullable: false
+    nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: PREV_DOC_LINE_NBR
     type: string
-    nullable: false
+    nullable: true
     metadata:
       description: ''
       mappings: []
@@ -53,19 +53,33 @@ schema:
       tags: []
   - name: PREV_DOC_TYPE_CD
     type: string
-    nullable: false
+    nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: PREV_DOC_CAT_CD
     type: string
-    nullable: false
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: REF_QTY
+    type: decimal(18,4)
+    nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: BASE_UOM_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: REF_AMT
     type: string
     nullable: true
     metadata:
@@ -95,6 +109,41 @@ schema:
       tags: []
   - name: CHG_DTTM
     type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: REQ_TYPE_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: PLNG_TYPE_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LVL_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: WHSE_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: BILL_CAT_CD
+    type: string
     nullable: true
     metadata:
       description: ''
@@ -135,8 +184,36 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: SPL_STK_TYPE_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SPL_STK_NUM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: NET_WT_MEAS
     type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: GM_STS_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: QTY_CONV_CD
+    type: string
     nullable: true
     metadata:
       description: ''
@@ -152,6 +229,76 @@ schema:
   - name: SD_UNIQ_DOC_RL_ID
     type: string
     nullable: false
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: QTY_CALC_POS_NGTV
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ID_MM_WM_TFR_ORDR_CNFRM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MVMT_TYPE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: BILL_INVC_PLAN_NUM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ITM_FOR_BILL_INVC_PLAN_PMT_CRD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: REF_QTY_SLS_UNIT
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: REF_QTY_BASE_UNIT_MEAS
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: GUARNT
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: IN_INV_MGMT_ACT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LOGL_SYS
+    type: string
+    nullable: true
     metadata:
       description: ''
       mappings: []
