--- a/src/pipelines/SAP_MD_SLS_DOC_HIER_BBA_BBL_BBN_MBP_HCS_GEU_MRS_TAI_SVS_BWI_P01_ATL_FSN_HM2/code/configs/resources/config/sap_md_sls_doc_hier_bba_bbl_bbn_mbp_hcs_geu_mrs_tai_svs_bwi_p01_atl_fsn.conf
+++ b/src/pipelines/SAP_MD_SLS_DOC_HIER_BBA_BBL_BBN_MBP_HCS_GEU_MRS_TAI_SVS_BWI_P01_ATL_FSN_HM2/code/configs/resources/config/sap_md_sls_doc_hier_bba_bbl_bbn_mbp_hcs_geu_mrs_tai_svs_bwi_p01_atl_fsn.conf
@@ -1,6 +1,8 @@
 ConfigDatabase=" "
 "DAI_ETL_ID"=0
 MANDT="100"
+"MATL_MVMT_YR"="cast(null as string)"
+"QTY_CONV_CD"="cast(null as string)"
 sourceDatabase=bba
 sourceSystem=bba
 targetSchema="dev_md_l1"
