JEKT-1887 Fixing missing datasets

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -4292,6 +4292,21 @@ pipelines:
     subgraphs: []
     dependencies: {}
 datasets:
+  datasets/DS_T460A:
+    name: DS_SAP_T460A
+    description: ''
+    author: lsorarra@its.jnj.com
+    createdAt: '2023-05-19 18:00:38'
+    modifiedAt: '2023-05-19 20:19:04'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: lsorarra@its.jnj.com
+        createdAt: '2023-05-19 18:00:38'
+        modifiedAt: '2023-05-19 18:00:38'
   datasets/DS_SAP_02_NSDM_V_MARC:
     name: DS_SAP_02_NSDM_V_MARC
     description: ''
