--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -10561,29 +10561,41 @@ jobs:
       onFailure: false
     pipelines:
     - pipelines/SAP_01_MD_PLNT
+    - pipelines/MD_SUP_CO_2
+    - pipelines/SAP_MD_MFG_ORDER_ATL_BBL_BBN_BWI_HM2_HMD_MBP_MRS_P01_SVS
+    - pipelines/SAP_MD_MATL_VALUT_HIST
     - pipelines/MD_MATL_SAP_ATL_BWI_FSN_GEU_MRS_P01_SVS_TAI
     - pipelines/MD_SAP_MATL_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_MRS
+    - pipelines/SAP_01_MD_BTCH
     - pipelines/SAP_01_MD_SLS_ORDR_LINE_ATL
     - pipelines/SAP_MD_CRNCY_SVS_BWI_ATL
+    - pipelines/SAP_MD_MATL_LOC_FSN_GEU_BBA_ATL
     - pipelines/SAP_01_MD_SLS_ORDR_ATL
+    - pipelines/SAP_01_md_matl_dstn_chn
+    - pipelines/SAP_MD_SUP_PRCHSNG_ORG
     - pipelines/MD_SLS_ORDR_SCHED_LINE_DELV_5
+    - pipelines/MD_MFG_ORDER_ITM
+    - pipelines/SAP_MD_MATL_VALUT
+    - pipelines/MD_BOM_ITM_NODE_7
     - pipelines/MD_MATL_ALT_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
     - pipelines/SAP_MD_MATL_INV_ATL
     - pipelines/SAP_MD_DELV_LINE_FSN_GEU_HCS_MRS_P01_SVS_ATL
     - pipelines/MD_SUP_7
     - pipelines/SAP_01_MD_SER_NUM_STOCK_SGMNT
+    - pipelines/SAP_MD_CO_CD_ATL
     - pipelines/SAP_MD_BOM_HDR_ATL_BBL_BWI_FSN_GEU_MBP_P01_SVS_TAI
     - pipelines/SAP_01_MD_SLS_DOC_PTNR_FUNC
     - pipelines/SAP_01_MD_CUST_HCS
     - pipelines/SAP_MD_MATL_BOM
     - pipelines/SAP_MD_MATL_MVMT_HDR
+    - pipelines/SAP_MD_OWN_EXPLN_FOR_TERM_OF_PMT
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 13:44:33'
-    modifiedAt: '2023-05-31 02:42:14'
+    modifiedAt: '2023-06-20 18:41:14'
     author: smille29@its.jnj.com
   jobs/DEV_BBA_PIPELINE_JOB:
     name: BBA_PIPELINE_JOB
@@ -13114,7 +13126,7 @@ jobs:
       clusterId: null
     enabled: null
     createdAt: '2023-05-16 15:12:34'
-    modifiedAt: '2023-05-17 17:00:37'
+    modifiedAt: '2023-06-20 17:58:47'
     author: natkins7@its.jnj.com
   jobs/JOB_MD_CO_CD:
     name: JOB_MD_CO_CD
