--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -10614,26 +10614,39 @@ jobs:
       onFailure: false
     pipelines:
     - pipelines/SAP_01_MD_PLNT
+    - pipelines/MD_SUP_CO_2
     - pipelines/SAP_01_MD_SLS_ORDR_BBA
+    - pipelines/SAP_MD_MATL_VALUT_HIST
+    - pipelines/SAP_MD_CO_CD_BBA_BBN_HCS_MRS_BWI
     - pipelines/MD_SAP_MATL_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_MRS
     - pipelines/MD_DELV_1
+    - pipelines/SAP_01_MD_BTCH
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST
     - pipelines/SAP_01_MD_PO_SCHED_LINE_DELV
+    - pipelines/SAP_01_md_matl_dstn_chn
+    - pipelines/SAP_MD_SUP_PRCHSNG_ORG
     - pipelines/SAP_RSEG
     - pipelines/MD_PRCH_DELV_CNFRMS_4
+    - pipelines/MD_MFG_ORDER_ITM
+    - pipelines/SAP_MD_MFG_ORDER_BBA_FSN
+    - pipelines/SAP_MD_CUST_MSTR_UNLD_DATA
     - pipelines/SAP_MD_MATL_INV_BBA_BBL_BBN_GEU_MRS_MBP
     - pipelines/SAP_MD_BILL_DOC_HDR_BBA_BBN
     - pipelines/SAP_01_MD_SLS_ORDR_LINE_bba
+    - pipelines/SAP_MD_MATL_VALUT
+    - pipelines/MD_BOM_ITM_NODE_7
     - pipelines/MD_MATL_ALT_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
     - pipelines/SAP_MD_MATL_LOC_BBA_BBL_BBN_02
     - pipelines/SAP_MD_MATL_BBA_BBN
     - pipelines/SAP_01_MD_SER_NUM_STOCK_SGMNT
+    - pipelines/MD_SLS_ORDR_SCHED_LINE_DELV_4
     - pipelines/SAP_MD_BOM_HDR_ATL_BBL_BWI_FSN_GEU_MBP_P01_SVS_TAI
     - pipelines/SAP_01_MD_SLS_DOC_PTNR_FUNC
     - pipelines/SAP_01_MD_CUST_HCS
     - pipelines/SAP_MD_DELV_LINE_BBA_BBL_BBN
     - pipelines/SAP_MD_MATL_BOM
     - pipelines/SAP_MD_MATL_MVMT_HDR
+    - pipelines/SAP_MD_OWN_EXPLN_FOR_TERM_OF_PMT
     - pipelines/MD_SUP_4
     jobClusterMode:
       clusterMode:
@@ -10641,7 +10654,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:19:30'
-    modifiedAt: '2023-05-31 02:42:33'
+    modifiedAt: '2023-06-20 19:20:10'
     author: smille29@its.jnj.com
   jobs/DEV_BBL_PIPELINE_JOB:
     name: BBL_PIPELINE_JOB
