--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -11399,20 +11399,30 @@ jobs:
     pipelines:
     - pipelines/JES_01_MD_SHIP_JET_JSW_DEU_JEM_SJD_DJD
     - pipelines/JDE_MD_DELV_LINE_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
+    - pipelines/MD_MATL_VALUT_JDE
     - pipelines/JDE_MD_MATL_MVMT_HDR_DEU_DJD_MTR_JEM_JES_JET__JSW
     - pipelines/JDE_01_MD_SLS_ORDR_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
+    - pipelines/JDE_MD_SLS_ORDR_HIST_JDE_DEU_DJD_JEM_JET_SJD
+    - pipelines/JDE_MD_BOM_ITM_NODE_DJD
+    - pipelines/JDE_01_md_matl_dstn_chn
+    - pipelines/JDE_MD_MFG_ORDER
     - pipelines/MD_DELV_9
+    - pipelines/JDE_MD_MFG_ORDER_ITM
+    - pipelines/JDE_01_MD_BTCH
     - pipelines/JDE_MD_SLS_ORDR_LINE_
     - pipelines/JDE_01_MD_CUST
     - pipelines/MD_MATL_ALT_UOM_BW2_DEU_DJD_GMD_JEM_JES_JET_JSW_MTR_SDJ
     - pipelines/MD_PRCH_DELV_CNFRMS_3
     - pipelines/JDE_01_MD_PLNT_DEU_DJD_SJD_JEM_JSW_JET_JES_BW2_GMD
     - pipelines/JDE_MD_CRNCY_BW2_DEU_DJD_GMD_JET_JEM_JES_JSW_SJD
+    - pipelines/JDE_MD_SUP_PRCHSNG_ORG
     - pipelines/MD_SUP_15
     - pipelines/JDE_MD_MATL_LOC_DJD
     - pipelines/MD_SLS_ORDR_SCHED_LINE_DELV_9
     - pipelines/JDE_MD_MATL
     - pipelines/JDE_01_MD_MATL_INV
+    - pipelines/JDE_MD_CO_CD_BW2_JET_DJD_JES
+    - pipelines/MD_SUP_CO_9
     - pipelines/JDE_MD_MATL_UOM_JET_JES_JEM_JSW_BW2_DJD_SJD_DEU_GMD_MTR
     jobClusterMode:
       clusterMode:
@@ -11420,7 +11430,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:22:54'
-    modifiedAt: '2023-05-31 02:47:01'
+    modifiedAt: '2023-06-20 20:28:26'
     author: smille29@its.jnj.com
   jobs/DEV_GMD_PIPELINE_JOB:
     name: GMD_PIPELINE_JOB
