JEKT-2742 🔁 Modified - BBL Job updated with Release 4 Pipelines     - Job        - BBL_PIPELINE_JOB

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -10673,19 +10673,30 @@ jobs:
       onFailure: false
     pipelines:
     - pipelines/SAP_01_MD_PLNT
+    - pipelines/MD_SUP_CO_2
+    - pipelines/SAP_MD_MFG_ORDER_ATL_BBL_BBN_BWI_HM2_HMD_MBP_MRS_P01_SVS
+    - pipelines/SAP_MD_MATL_VALUT_HIST
     - pipelines/MD_SAP_MATL_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_MRS
     - pipelines/MD_DELV_1
+    - pipelines/SAP_01_MD_BTCH
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST
     - pipelines/SAP_MD_MATL_BBL
     - pipelines/MD_PRCH_DELV_CNFRMS_5
     - pipelines/MD_SUP_1
     - pipelines/SAP_01_MD_PO_SCHED_LINE_DELV
     - pipelines/SAP_01_MD_SLS_ORDR_LINE
+    - pipelines/SAP_01_md_matl_dstn_chn
     - pipelines/SAP_01_MD_SHIP
+    - pipelines/SAP_MD_SUP_PRCHSNG_ORG
     - pipelines/SAP_RSEG
+    - pipelines/MD_MFG_ORDER_ITM
+    - pipelines/SAP_MD_CUST_MSTR_UNLD_DATA
     - pipelines/SAP_MD_MATL_INV_BBA_BBL_BBN_GEU_MRS_MBP
     - pipelines/MD_BILL_DOC_HDR_BBL
+    - pipelines/SAP_MD_MATL_VALUT
+    - pipelines/MD_BOM_ITM_NODE_7
     - pipelines/MD_MATL_ALT_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
+    - pipelines/SAP_MD_CO_CD_BBL
     - pipelines/SAP_MD_MATL_LOC_BBA_BBL_BBN_02
     - pipelines/SAP_01_MD_SLS_ORDR_BBL
     - pipelines/SAP_01_MD_SER_NUM_STOCK_SGMNT
@@ -10696,6 +10707,7 @@ jobs:
     - pipelines/SAP_MD_DELV_LINE_BBA_BBL_BBN
     - pipelines/SAP_MD_MATL_BOM
     - pipelines/SAP_MD_MATL_MVMT_HDR
+    - pipelines/SAP_MD_OWN_EXPLN_FOR_TERM_OF_PMT
     - pipelines/SAP_MD_CRNCY_BBN_P01_HCS_TAI_BBL_GEU_MBP_FSN_MRS_HM2
     jobClusterMode:
       clusterMode:
@@ -10703,7 +10715,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:21:30'
-    modifiedAt: '2023-05-31 02:42:47'
+    modifiedAt: '2023-06-20 20:41:42'
     author: smille29@its.jnj.com
   jobs/DEV_BBN_PIPELINE_JOB:
     name: BBN_PIPELINE_JOB
