JEKT-2742(Added 10 Release 4 Objects to GMD_PIPELINE_JOB) 🔁 Modified     - Job        - GMD_PIPELINE_JOB

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -11451,23 +11451,33 @@ jobs:
     - pipelines/JDE_MD_DELV_LINE_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
     - pipelines/JDE_MD_MATL_MVMT_HDR_GMD
     - pipelines/JDE_MD_BOM_HDR_BW2
+    - pipelines/MD_MATL_VALUT_JDE
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST_JDE
+    - pipelines/MD_SUP_CO_6
     - pipelines/JDE_01_MD_SLS_ORDR_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
     - pipelines/JDE_MD_MATL_LOC_GMD
+    - pipelines/JDE_01_md_matl_dstn_chn
+    - pipelines/JDE_MD_MFG_ORDER
     - pipelines/MD_DELV_9
+    - pipelines/MD_BOM_ITM_NODE_2
+    - pipelines/JDE_MD_MFG_ORDER_ITM
     - pipelines/JDE_01_MD_MATL_BOM
     - pipelines/JDE_01_MD_PO_SCHED_LINE_DELV
     - pipelines/MD_SUP_10
+    - pipelines/JDE_01_MD_BTCH
     - pipelines/JDE_01_MD_SHIP_MTK
     - pipelines/JDE_MD_SLS_ORDR_LINE_
     - pipelines/JDE_01_MD_CUST
     - pipelines/MD_MATL_ALT_UOM_BW2_DEU_DJD_GMD_JEM_JES_JET_JSW_MTR_SDJ
     - pipelines/MD_PRCH_DELV_CNFRMS_3
     - pipelines/JDE_01_MD_PLNT_DEU_DJD_SJD_JEM_JSW_JET_JES_BW2_GMD
+    - pipelines/JDE_MD_SLS_ORDR_HIST_JDE_GMD
     - pipelines/JDE_MD_CRNCY_BW2_DEU_DJD_GMD_JET_JEM_JES_JSW_SJD
+    - pipelines/JDE_MD_SUP_PRCHSNG_ORG
     - pipelines/MD_SLS_ORDR_SCHED_LINE_DELV_9
     - pipelines/JDE_MD_MATL
     - pipelines/JDE_01_MD_MATL_INV
+    - pipelines/JDE_MD_CO_CD_BW2_JET_DJD_JES
     - pipelines/jde_md_doc_itm_incm_invc
     - pipelines/JDE_MD_MATL_UOM_JET_JES_JEM_JSW_BW2_DJD_SJD_DEU_GMD_MTR
     jobClusterMode:
@@ -11476,7 +11486,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:23:35'
-    modifiedAt: '2023-05-31 02:49:32'
+    modifiedAt: '2023-06-20 20:51:26'
     author: smille29@its.jnj.com
   jobs/DEV_JEM_PIPELINE_JOB:
     name: JEM_PIPELINE_JOB
