JEKT-2742 - 🔁 Modified - BBN Job updated with Release 4 Pipelines     - Job        - BBL_PIPELINE_JOB        - BBN_PIPELINE_JOB

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -10715,7 +10715,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:21:30'
-    modifiedAt: '2023-06-20 20:41:42'
+    modifiedAt: '2023-06-20 20:43:36'
     author: smille29@its.jnj.com
   jobs/DEV_BBN_PIPELINE_JOB:
     name: BBN_PIPELINE_JOB
@@ -10734,18 +10734,29 @@ jobs:
       onFailure: false
     pipelines:
     - pipelines/SAP_01_MD_PLNT
+    - pipelines/MD_SUP_CO_2
+    - pipelines/SAP_MD_MFG_ORDER_ATL_BBL_BBN_BWI_HM2_HMD_MBP_MRS_P01_SVS
+    - pipelines/SAP_MD_MATL_VALUT_HIST
+    - pipelines/SAP_MD_CO_CD_BBA_BBN_HCS_MRS_BWI
     - pipelines/MD_SAP_MATL_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_MRS
     - pipelines/MD_DELV_1
+    - pipelines/SAP_01_MD_BTCH
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST
     - pipelines/SAP_01_MD_SLS_ORDR_BBA_BBL_BBN_BWI_TAI_GEU_HCS_MRS_P01_MBP_SVS_FSN
     - pipelines/MD_PRCH_DELV_CNFRMS_5
     - pipelines/MD_SUP_1
     - pipelines/SAP_01_MD_PO_SCHED_LINE_DELV
+    - pipelines/SAP_01_md_matl_dstn_chn
     - pipelines/SAP_01_MD_SHIP
+    - pipelines/SAP_MD_SUP_PRCHSNG_ORG
     - pipelines/SAP_01_MD_SLS_ORDR_LINE_bbn
     - pipelines/SAP_RSEG
+    - pipelines/MD_MFG_ORDER_ITM
+    - pipelines/SAP_MD_CUST_MSTR_UNLD_DATA
     - pipelines/SAP_MD_MATL_INV_BBA_BBL_BBN_GEU_MRS_MBP
     - pipelines/SAP_MD_BILL_DOC_HDR_BBA_BBN
+    - pipelines/SAP_MD_MATL_VALUT
+    - pipelines/MD_BOM_ITM_NODE_7
     - pipelines/MD_MATL_ALT_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
     - pipelines/SAP_MD_MATL_LOC_BBA_BBL_BBN_02
     - pipelines/SAP_MD_MATL_BBA_BBN
@@ -10757,6 +10768,7 @@ jobs:
     - pipelines/SAP_MD_DELV_LINE_BBA_BBL_BBN
     - pipelines/SAP_MD_MATL_BOM
     - pipelines/SAP_MD_MATL_MVMT_HDR
+    - pipelines/SAP_MD_OWN_EXPLN_FOR_TERM_OF_PMT
     - pipelines/SAP_MD_CRNCY_BBN_P01_HCS_TAI_BBL_GEU_MBP_FSN_MRS_HM2
     jobClusterMode:
       clusterMode:
@@ -10764,7 +10776,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:22:48'
-    modifiedAt: '2023-05-31 02:42:55'
+    modifiedAt: '2023-06-20 20:57:56'
     author: smille29@its.jnj.com
   jobs/DEV_MRS_PIPELINE_JOB:
     name: MRS_PIPELINE_JOB
