--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -11080,33 +11080,44 @@ jobs:
       onFailure: false
     pipelines:
     - pipelines/SAP_01_MD_PLNT
+    - pipelines/SAP_MD_MFG_ORDER_ATL_BBL_BBN_BWI_HM2_HMD_MBP_MRS_P01_SVS
     - pipelines/SAP_MD_MATL_INV_BWI
+    - pipelines/SAP_MD_MATL_VALUT_HIST
     - pipelines/MD_MATL_SAP_ATL_BWI_FSN_GEU_MRS_P01_SVS_TAI
+    - pipelines/SAP_MD_CO_CD_BBA_BBN_HCS_MRS_BWI
     - pipelines/MD_SAP_MATL_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_MRS
+    - pipelines/SAP_01_MD_BTCH
     - pipelines/SAP_01_MD_SLS_ORDR_LINE_bwi
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST
     - pipelines/SAP_MD_CRNCY_SVS_BWI_ATL
     - pipelines/MD_SLS_ORDR_SCHED_LINE_DELV_6
     - pipelines/SAP_01_MD_PO_SCHED_LINE_DELV
     - pipelines/MD_PRCH_DELV_CNFRMS_10
+    - pipelines/SAP_MD_SUP_PRCHSNG_ORG
     - pipelines/MD_SUP_6
     - pipelines/SAP_MD_MATL_LOC_TAI_MRS_P01_HCS_BWI_GEU_SVS_MBP_FSN_02
+    - pipelines/MD_MFG_ORDER_ITM
+    - pipelines/SAP_MD_MATL_VALUT
+    - pipelines/MD_BOM_ITM_NODE_7
     - pipelines/MD_MATL_ALT_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
     - pipelines/MD_DELV_3
+    - pipelines/SAP_01_md_matl_dstn_chn_bwi
     - pipelines/SAP_MD_DELV_LINE_BWI_TAI
     - pipelines/SAP_01_MD_SLS_ORDR_BWI
     - pipelines/SAP_MD_BOM_HDR_ATL_BBL_BWI_FSN_GEU_MBP_P01_SVS_TAI
     - pipelines/SAP_01_MD_SLS_DOC_PTNR_FUNC
     - pipelines/SAP_01_MD_CUST_HCS
+    - pipelines/MD_SUP_CO_5
     - pipelines/SAP_MD_MATL_BOM
     - pipelines/SAP_MD_MATL_MVMT_HDR
+    - pipelines/SAP_MD_OWN_EXPLN_FOR_TERM_OF_PMT
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:42:32'
-    modifiedAt: '2023-05-31 18:33:24'
+    modifiedAt: '2023-06-20 21:44:24'
     author: smille29@its.jnj.com
   jobs/DEV_FSN_PIPELINE_JOB:
     name: FSN_PIPELINE_JOB
