--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -11620,22 +11620,32 @@ jobs:
     - pipelines/JDE_MD_DELV_LINE_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
     - pipelines/MD_SUP_14
     - pipelines/JDE_MD_BOM_HDR_BW2
+    - pipelines/MD_MATL_VALUT_JDE
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST_JDE
     - pipelines/JDE_MD_MATL_MVMT_HDR_DEU_DJD_MTR_JEM_JES_JET__JSW
     - pipelines/JDE_01_MD_SLS_ORDR_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
+    - pipelines/JDE_MD_SLS_ORDR_HIST_JDE_DEU_DJD_JEM_JET_SJD
+    - pipelines/JDE_01_md_matl_dstn_chn
+    - pipelines/JDE_MD_MFG_ORDER
     - pipelines/MD_DELV_9
+    - pipelines/JDE_MD_MFG_ORDER_ITM
     - pipelines/JDE_01_MD_MATL_BOM
     - pipelines/JDE_01_MD_PO_SCHED_LINE_DELV
+    - pipelines/MD_BOM_ITM_NODE_6
+    - pipelines/JDE_01_MD_BTCH
     - pipelines/JDE_MD_SLS_ORDR_LINE_
     - pipelines/JDE_01_MD_CUST
     - pipelines/MD_MATL_ALT_UOM_BW2_DEU_DJD_GMD_JEM_JES_JET_JSW_MTR_SDJ
     - pipelines/MD_PRCH_DELV_CNFRMS_3
     - pipelines/JDE_01_MD_PLNT_DEU_DJD_SJD_JEM_JSW_JET_JES_BW2_GMD
     - pipelines/JDE_MD_CRNCY_BW2_DEU_DJD_GMD_JET_JEM_JES_JSW_SJD
+    - pipelines/MD_SUP_CO_8
+    - pipelines/JDE_MD_SUP_PRCHSNG_ORG
     - pipelines/MD_SLS_ORDR_SCHED_LINE_DELV_9
     - pipelines/JDE_MD_MATL_LOC_JET
     - pipelines/JDE_MD_MATL
     - pipelines/JDE_01_MD_MATL_INV
+    - pipelines/JDE_MD_CO_CD_BW2_JET_DJD_JES
     - pipelines/jde_md_doc_itm_incm_invc
     - pipelines/JDE_MD_MATL_UOM_JET_JES_JEM_JSW_BW2_DJD_SJD_DEU_GMD_MTR
     jobClusterMode:
@@ -11644,7 +11654,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:26:51'
-    modifiedAt: '2023-05-31 02:56:16'
+    modifiedAt: '2023-06-20 21:52:44'
     author: smille29@its.jnj.com
   jobs/DEV_JNS_PIPELINE_JOB:
     name: JNS_PIPELINE_JOB
