JEKT-2742- 🔁 Modified FSN Job updated with Release 4 Pipeline     - Job        - FSN_PIPELINE_JOB

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -11136,15 +11136,26 @@ jobs:
       onFailure: false
     pipelines:
     - pipelines/SAP_01_MD_PLNT
+    - pipelines/MD_SUP_CO_2
     - pipelines/MD_DELV_2
     - pipelines/SAP_01_MD_SLS_ORDR_BBA
+    - pipelines/SAP_MD_MATL_VALUT_HIST
     - pipelines/MD_MATL_SAP_ATL_BWI_FSN_GEU_MRS_P01_SVS_TAI
     - pipelines/MD_SAP_MATL_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_MRS
     - pipelines/SAP_01_MD_BILL_DOC_HDR_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
+    - pipelines/SAP_01_MD_BTCH
     - pipelines/SAP_MD_MATL_INV_FSN
     - pipelines/SAP_01_MD_PO_SCHED_LINE_DELV
+    - pipelines/SAP_01_md_matl_dstn_chn
+    - pipelines/SAP_MD_SUP_PRCHSNG_ORG
     - pipelines/SAP_MD_MATL_LOC_TAI_MRS_P01_HCS_BWI_GEU_SVS_MBP_FSN_02
+    - pipelines/SAP_MD_CO_CD_MBP_FSN_ATL
     - pipelines/MD_SLS_ORDR_SCHED_LINE_DELV_5
+    - pipelines/MD_MFG_ORDER_ITM
+    - pipelines/SAP_MD_MFG_ORDER_BBA_FSN
+    - pipelines/SAP_MD_CUST_MSTR_UNLD_DATA
+    - pipelines/SAP_MD_MATL_VALUT
+    - pipelines/MD_BOM_ITM_NODE_7
     - pipelines/MD_MATL_ALT_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
     - pipelines/SAP_MD_DELV_LINE_FSN_GEU_HCS_MRS_P01_SVS_ATL
     - pipelines/SAP_01_MD_SLS_ORDR_LINE_FSN
@@ -11155,6 +11166,7 @@ jobs:
     - pipelines/SAP_01_MD_SHIP_FSN
     - pipelines/SAP_MD_MATL_BOM
     - pipelines/SAP_MD_MATL_MVMT_HDR
+    - pipelines/SAP_MD_OWN_EXPLN_FOR_TERM_OF_PMT
     - pipelines/SAP_MD_CRNCY_BBN_P01_HCS_TAI_BBL_GEU_MBP_FSN_MRS_HM2
     jobClusterMode:
       clusterMode:
@@ -11162,7 +11174,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:44:07'
-    modifiedAt: '2023-05-31 18:36:00'
+    modifiedAt: '2023-06-20 22:04:35'
     author: smille29@its.jnj.com
   jobs/DEV_MTK_PIPELINE_JOB:
     name: MTK_PIPELINE_JOB
