--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -11699,22 +11699,32 @@ jobs:
     - pipelines/JES_01_MD_SHIP_JET_JSW_DEU_JEM_SJD_DJD
     - pipelines/JDE_MD_DELV_LINE_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
     - pipelines/JDE_MD_BOM_HDR_BW2
+    - pipelines/MD_MATL_VALUT_JDE
+    - pipelines/JDE_MD_SLS_ORDR_HIST_JDE_JSW
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST_JDE
+    - pipelines/MD_SUP_CO_6
     - pipelines/JDE_MD_MATL_MVMT_HDR_DEU_DJD_MTR_JEM_JES_JET__JSW
     - pipelines/JDE_01_MD_SLS_ORDR_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
+    - pipelines/JDE_01_md_matl_dstn_chn
+    - pipelines/MD_BOM_ITM_NODE_5
+    - pipelines/JDE_MD_MFG_ORDER
     - pipelines/MD_DELV_9
+    - pipelines/JDE_MD_MFG_ORDER_ITM
     - pipelines/JDE_01_MD_MATL_BOM
     - pipelines/JDE_01_MD_PO_SCHED_LINE_DELV
     - pipelines/JDE_MD_MATL_LOC_JSW
+    - pipelines/JDE_01_MD_BTCH
     - pipelines/JDE_MD_SLS_ORDR_LINE_
     - pipelines/JDE_01_MD_CUST
     - pipelines/MD_MATL_ALT_UOM_BW2_DEU_DJD_GMD_JEM_JES_JET_JSW_MTR_SDJ
     - pipelines/MD_PRCH_DELV_CNFRMS_3
     - pipelines/JDE_01_MD_PLNT_DEU_DJD_SJD_JEM_JSW_JET_JES_BW2_GMD
     - pipelines/JDE_MD_CRNCY_BW2_DEU_DJD_GMD_JET_JEM_JES_JSW_SJD
+    - pipelines/JDE_MD_SUP_PRCHSNG_ORG
     - pipelines/MD_SLS_ORDR_SCHED_LINE_DELV_9
     - pipelines/JDE_MD_MATL
     - pipelines/JDE_01_MD_MATL_INV
+    - pipelines/JDE_MD_CO_CD_BW2_JET_DJD_JES
     - pipelines/MD_SUP_12
     - pipelines/jde_md_doc_itm_incm_invc
     - pipelines/JDE_MD_MATL_UOM_JET_JES_JEM_JSW_BW2_DJD_SJD_DEU_GMD_MTR
@@ -11724,7 +11734,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:28:09'
-    modifiedAt: '2023-05-31 02:56:21'
+    modifiedAt: '2023-06-20 22:05:17'
     author: smille29@its.jnj.com
   jobs/DEV_MTR_PIPELINE_JOB:
     name: MTR_PIPELINE_JOB
