--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -11754,20 +11754,29 @@ jobs:
     pipelines:
     - pipelines/JDE_MD_DELV_LINE_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
     - pipelines/JDE_MD_BOM_HDR_BW2
+    - pipelines/MD_MATL_VALUT_JDE
+    - pipelines/MD_SUP_CO_6
     - pipelines/JDE_MD_MATL_MVMT_HDR_DEU_DJD_MTR_JEM_JES_JET__JSW
     - pipelines/JDE_01_MD_SLS_ORDR_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
     - pipelines/JDE_02_MD_PLNT_MTR
+    - pipelines/JDE_01_md_matl_dstn_chn
+    - pipelines/JDE_MD_MFG_ORDER
     - pipelines/MD_DELV_9
     - pipelines/JDE_MD_MATL_LOC_MTR
+    - pipelines/MD_BOM_ITM_NODE_2
+    - pipelines/JDE_MD_MFG_ORDER_ITM
     - pipelines/JDE_01_MD_MATL_BOM
     - pipelines/JDE_01_MD_PO_SCHED_LINE_DELV
+    - pipelines/JDE_01_MD_BTCH
     - pipelines/JDE_01_MD_SHIP_MTK
     - pipelines/JDE_MD_SLS_ORDR_LINE_
     - pipelines/JDE_01_MD_CUST
     - pipelines/MD_MATL_ALT_UOM_BW2_DEU_DJD_GMD_JEM_JES_JET_JSW_MTR_SDJ
+    - pipelines/JDE_MD_SUP_PRCHSNG_ORG
     - pipelines/MD_SLS_ORDR_SCHED_LINE_DELV_9
     - pipelines/JDE_MD_MATL
     - pipelines/JDE_01_MD_MATL_INV
+    - pipelines/JDE_MD_CO_CD_BW2_JET_DJD_JES
     - pipelines/MD_SUP_12
     - pipelines/MD_PRCH_DELV_CNFRMS_2
     - pipelines/JDE_MD_MATL_UOM_JET_JES_JEM_JSW_BW2_DJD_SJD_DEU_GMD_MTR
@@ -11777,7 +11786,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:28:47'
-    modifiedAt: '2023-05-31 02:58:20'
+    modifiedAt: '2023-06-20 22:20:09'
     author: smille29@its.jnj.com
   jobs/DEV_SJD_PIPELINE_JOB:
     name: SJD_PIPELINE_JOB
