--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -10843,16 +10843,26 @@ jobs:
       onFailure: false
     pipelines:
     - pipelines/SAP_01_MD_PLNT
+    - pipelines/SAP_MD_MFG_ORDER_HCS
+    - pipelines/MD_SUP_CO_2
+    - pipelines/SAP_MD_MATL_VALUT_HIST
+    - pipelines/SAP_MD_CO_CD_BBA_BBN_HCS_MRS_BWI
     - pipelines/MD_DELV_1
     - pipelines/SAP_01_MD_BILL_DOC_HDR_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
+    - pipelines/SAP_01_MD_BTCH
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST
     - pipelines/MD_SUP_1
     - pipelines/SAP_01_MD_PO_SCHED_LINE_DELV
+    - pipelines/SAP_01_md_matl_dstn_chn
     - pipelines/SAP_MD_MATL_HCS
     - pipelines/SAP_MD_MATL_INV_HCS
     - pipelines/SAP_01_MD_SHIP
+    - pipelines/SAP_MD_SUP_PRCHSNG_ORG
     - pipelines/SAP_02_MD_SER_NUM_STOCK_SGMNT
     - pipelines/SAP_MD_MATL_LOC_TAI_MRS_P01_HCS_BWI_GEU_SVS_MBP_FSN_02
+    - pipelines/SAP_MD_CUST_MSTR_UNLD_DATA
+    - pipelines/SAP_MD_MATL_VALUT
+    - pipelines/MD_BOM_ITM_NODE_7
     - pipelines/MD_MATL_ALT_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
     - pipelines/SAP_MD_DELV_LINE_FSN_GEU_HCS_MRS_P01_SVS_ATL
     - pipelines/SAP_01_MD_SLS_ORDR_LINE_hcs
@@ -10865,6 +10875,7 @@ jobs:
     - pipelines/SAP_MD_MATL_BOM
     - pipelines/SAP_MD_MATL_MVMT_HDR
     - pipelines/SAP_01_MD_SLS_ORDR_HCS
+    - pipelines/SAP_MD_OWN_EXPLN_FOR_TERM_OF_PMT
     - pipelines/SAP_MD_CRNCY_BBN_P01_HCS_TAI_BBL_GEU_MBP_FSN_MRS_HM2
     jobClusterMode:
       clusterMode:
@@ -10872,7 +10883,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:25:32'
-    modifiedAt: '2023-06-05 23:22:17'
+    modifiedAt: '2023-06-20 22:25:06'
     author: smille29@its.jnj.com
   jobs/DEV_MBP_PIPELINE_JOB:
     name: MBP_PIPELINE_JOB
