--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -10903,17 +10903,28 @@ jobs:
     pipelines:
     - pipelines/SAP_MD_MATL_MBP
     - pipelines/SAP_01_MD_PLNT
+    - pipelines/SAP_MD_MFG_ORDER_ATL_BBL_BBN_BWI_HM2_HMD_MBP_MRS_P01_SVS
     - pipelines/SAP_MD_DELV_LINE_MBP
+    - pipelines/SAP_MD_MATL_VALUT_HIST
     - pipelines/SAP_01_MD_SHIP_MBP
     - pipelines/MD_PRCH_DELV_CNFRMS_1
     - pipelines/MD_DELV_8
     - pipelines/SAP_01_MD_BILL_DOC_HDR_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
     - pipelines/SAP_MD_MATL_INV_MBP
+    - pipelines/SAP_01_MD_BTCH
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST
     - pipelines/SAP_01_MD_SLS_ORDR_BBA_BBL_BBN_BWI_TAI_GEU_HCS_MRS_P01_MBP_SVS_FSN
     - pipelines/SAP_01_MD_PO_SCHED_LINE_DELV
+    - pipelines/SAP_01_md_matl_dstn_chn
+    - pipelines/SAP_MD_SUP_PRCHSNG_ORG
     - pipelines/SAP_02_MD_SER_NUM_STOCK_SGMNT
+    - pipelines/MD_SUP_CO_10
     - pipelines/SAP_MD_MATL_LOC_TAI_MRS_P01_HCS_BWI_GEU_SVS_MBP_FSN_02
+    - pipelines/SAP_MD_CO_CD_MBP_FSN_ATL
+    - pipelines/MD_MFG_ORDER_ITM
+    - pipelines/SAP_MD_CUST_MSTR_UNLD_DATA
+    - pipelines/SAP_MD_MATL_VALUT
+    - pipelines/MD_BOM_ITM_NODE_7
     - pipelines/MD_MATL_ALT_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
     - pipelines/MD_SLS_ORDR_SCHED_LINE_DELV_8
     - pipelines/MD_SAP_MATL_UOM_MBP_SVS_P01_HCS_HMD
@@ -10923,6 +10934,7 @@ jobs:
     - pipelines/SAP_01_MD_SLS_DOC_PTNR_FUNC
     - pipelines/SAP_MD_MATL_BOM
     - pipelines/SAP_MD_MATL_MVMT_HDR
+    - pipelines/SAP_MD_OWN_EXPLN_FOR_TERM_OF_PMT
     - pipelines/SAP_MD_CRNCY_BBN_P01_HCS_TAI_BBL_GEU_MBP_FSN_MRS_HM2
     jobClusterMode:
       clusterMode:
@@ -10930,7 +10942,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:26:51'
-    modifiedAt: '2023-05-31 02:56:33'
+    modifiedAt: '2023-06-20 22:42:45'
     author: smille29@its.jnj.com
   jobs/DEV_P01_PIPELINE_JOB:
     name: P01_PIPELINE_JOB
