--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -10796,18 +10796,28 @@ jobs:
     pipelines:
     - pipelines/MD_PRCH_DELV_CNFRMS_8
     - pipelines/SAP_01_MD_PLNT
+    - pipelines/MD_SUP_CO_2
+    - pipelines/SAP_MD_MFG_ORDER_ATL_BBL_BBN_BWI_HM2_HMD_MBP_MRS_P01_SVS
     - pipelines/SAP_01_MD_SLS_ORDR_BBA
+    - pipelines/SAP_MD_MATL_VALUT_HIST
     - pipelines/MD_MATL_SAP_ATL_BWI_FSN_GEU_MRS_P01_SVS_TAI
     - pipelines/SAP_01_MD_SLS_ORDR_LINE_mrs
+    - pipelines/SAP_MD_CO_CD_BBA_BBN_HCS_MRS_BWI
     - pipelines/MD_SAP_MATL_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_MRS
     - pipelines/MD_DELV_1
     - pipelines/SAP_01_MD_BILL_DOC_HDR_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
+    - pipelines/SAP_01_MD_BTCH
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST
     - pipelines/MD_SUP_1
     - pipelines/SAP_01_MD_PO_SCHED_LINE_DELV
+    - pipelines/SAP_01_md_matl_dstn_chn
+    - pipelines/SAP_MD_SUP_PRCHSNG_ORG
     - pipelines/SAP_RSEG
     - pipelines/SAP_MD_MATL_LOC_TAI_MRS_P01_HCS_BWI_GEU_SVS_MBP_FSN_02
+    - pipelines/MD_MFG_ORDER_ITM
     - pipelines/SAP_MD_MATL_INV_BBA_BBL_BBN_GEU_MRS_MBP
+    - pipelines/SAP_MD_MATL_VALUT
+    - pipelines/MD_BOM_ITM_NODE_7
     - pipelines/MD_MATL_ALT_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
     - pipelines/SAP_MD_DELV_LINE_FSN_GEU_HCS_MRS_P01_SVS_ATL
     - pipelines/SAP_01_MD_SER_NUM_STOCK_SGMNT
@@ -10817,6 +10827,7 @@ jobs:
     - pipelines/SAP_01_MD_SLS_DOC_PTNR_FUNC
     - pipelines/SAP_MD_MATL_BOM
     - pipelines/SAP_MD_MATL_MVMT_HDR
+    - pipelines/SAP_MD_OWN_EXPLN_FOR_TERM_OF_PMT
     - pipelines/SAP_MD_CRNCY_BBN_P01_HCS_TAI_BBL_GEU_MBP_FSN_MRS_HM2
     jobClusterMode:
       clusterMode:
@@ -10824,7 +10835,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:23:52'
-    modifiedAt: '2023-05-31 02:57:47'
+    modifiedAt: '2023-06-20 23:01:05'
     author: smille29@its.jnj.com
   jobs/DEV_HCS_PIPELINE_JOB:
     name: HCS_PIPELINE_JOB
