--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -10974,18 +10974,29 @@ jobs:
     - pipelines/MD_SUP_2
     - pipelines/MD_PRCH_DELV_CNFRMS_9
     - pipelines/SAP_01_MD_PLNT
+    - pipelines/SAP_MD_MFG_ORDER_ATL_BBL_BBN_BWI_HM2_HMD_MBP_MRS_P01_SVS
+    - pipelines/SAP_MD_MATL_VALUT_HIST
     - pipelines/MD_MATL_SAP_ATL_BWI_FSN_GEU_MRS_P01_SVS_TAI
     - pipelines/SAP_01_MD_BILL_DOC_HDR_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
+    - pipelines/SAP_MD_CO_CD_P01_BBL_GEU_SVS
+    - pipelines/SAP_01_MD_BTCH
     - pipelines/MD_SLS_ORDR_SCHED_LINE_DELV_2
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST
     - pipelines/SAP_01_MD_SLS_ORDR_BBA_BBL_BBN_BWI_TAI_GEU_HCS_MRS_P01_MBP_SVS_FSN
     - pipelines/SAP_01_MD_PO_SCHED_LINE_DELV
+    - pipelines/SAP_01_md_matl_dstn_chn
     - pipelines/SAP_01_MD_SHIP
+    - pipelines/SAP_MD_SUP_PRCHSNG_ORG
     - pipelines/SAP_02_MD_SER_NUM_STOCK_SGMNT
     - pipelines/SAP_RSEG
     - pipelines/SAP_MD_MATL_LOC_TAI_MRS_P01_HCS_BWI_GEU_SVS_MBP_FSN_02
     - pipelines/MD_DELV_5
+    - pipelines/MD_SUP_CO_7
+    - pipelines/MD_MFG_ORDER_ITM
     - pipelines/SAP_MD_MATL_INV_P01
+    - pipelines/SAP_MD_CUST_MSTR_UNLD_DATA
+    - pipelines/SAP_MD_MATL_VALUT
+    - pipelines/MD_BOM_ITM_NODE_7
     - pipelines/MD_MATL_ALT_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
     - pipelines/SAP_MD_DELV_LINE_FSN_GEU_HCS_MRS_P01_SVS_ATL
     - pipelines/MD_SAP_MATL_UOM_MBP_SVS_P01_HCS_HMD
@@ -10995,6 +11006,7 @@ jobs:
     - pipelines/SAP_MD_MATL_BOM
     - pipelines/SAP_MD_MATL_MVMT_HDR
     - pipelines/SAP_01_MD_SLS_ORDR_LINE_P01
+    - pipelines/SAP_MD_OWN_EXPLN_FOR_TERM_OF_PMT
     - pipelines/SAP_MD_CRNCY_BBN_P01_HCS_TAI_BBL_GEU_MBP_FSN_MRS_HM2
     jobClusterMode:
       clusterMode:
@@ -11002,7 +11014,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:27:50'
-    modifiedAt: '2023-05-31 02:58:26'
+    modifiedAt: '2023-06-20 23:07:46'
     author: smille29@its.jnj.com
   jobs/DEV_SVS_PIPELINE_JOB:
     name: SVS_PIPELINE_JOB
