JEKT-2742 - 🔁 Modified - SVS Job updated with Release 4 Pipelines     - Job        - SVS_PIPELINE_JOB

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -11034,16 +11034,26 @@ jobs:
     pipelines:
     - pipelines/SAP_01_MD_PLNT
     - pipelines/MD_SLS_ORDR_SCHED_LINE_DELV_7
+    - pipelines/MD_SUP_CO_2
+    - pipelines/SAP_MD_MFG_ORDER_ATL_BBL_BBN_BWI_HM2_HMD_MBP_MRS_P01_SVS
+    - pipelines/SAP_MD_MATL_VALUT_HIST
     - pipelines/MD_MATL_SAP_ATL_BWI_FSN_GEU_MRS_P01_SVS_TAI
     - pipelines/SAP_01_MD_BILL_DOC_HDR_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
+    - pipelines/SAP_MD_CO_CD_P01_BBL_GEU_SVS
+    - pipelines/SAP_01_MD_BTCH
     - pipelines/SAP_MD_CRNCY_SVS_BWI_ATL
     - pipelines/SAP_01_MD_SLS_ORDR_BBA_BBL_BBN_BWI_TAI_GEU_HCS_MRS_P01_MBP_SVS_FSN
     - pipelines/SAP_01_MD_PO_SCHED_LINE_DELV
+    - pipelines/SAP_01_md_matl_dstn_chn
+    - pipelines/SAP_MD_SUP_PRCHSNG_ORG
     - pipelines/SAP_02_MD_SER_NUM_STOCK_SGMNT
     - pipelines/SAP_MD_MATL_LOC_TAI_MRS_P01_HCS_BWI_GEU_SVS_MBP_FSN_02
     - pipelines/SAP_MD_PRCH_DELV_CNFRMS_SVS
+    - pipelines/MD_MFG_ORDER_ITM
     - pipelines/SAP_MD_MATL_INV_P01
     - pipelines/SAP_01_MD_SLS_ORDR_LINE_svs
+    - pipelines/SAP_MD_MATL_VALUT
+    - pipelines/MD_BOM_ITM_NODE_7
     - pipelines/MD_MATL_ALT_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
     - pipelines/SAP_MD_DELV_LINE_FSN_GEU_HCS_MRS_P01_SVS_ATL
     - pipelines/MD_DELV_7
@@ -11053,13 +11063,14 @@ jobs:
     - pipelines/SAP_01_MD_SLS_DOC_PTNR_FUNC
     - pipelines/SAP_MD_MATL_BOM
     - pipelines/SAP_MD_MATL_MVMT_HDR
+    - pipelines/SAP_MD_OWN_EXPLN_FOR_TERM_OF_PMT
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:30:48'
-    modifiedAt: '2023-05-31 18:10:24'
+    modifiedAt: '2023-06-20 23:14:11'
     author: smille29@its.jnj.com
   jobs/DEV_ANS_PIPELINE_JOB:
     name: ANS_PIPELINE_JOB
