JEKT-2742 - 🔁 Modified - TAI Job updated with Release 4 Pipelines     - Job        - TAI_PIPELINE_JOB

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -11298,16 +11298,25 @@ jobs:
       onFailure: false
     pipelines:
     - pipelines/SAP_01_MD_PLNT
+    - pipelines/SAP_MD_MATL_VALUT_HIST
     - pipelines/MD_MATL_SAP_ATL_BWI_FSN_GEU_MRS_P01_SVS_TAI
     - pipelines/MD_SAP_MATL_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_MRS
     - pipelines/SAP_01_MD_BILL_DOC_HDR_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
+    - pipelines/SAP_01_MD_BTCH
     - pipelines/MD_DELV_4
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST
+    - pipelines/MD_SUP_CO_3
     - pipelines/SAP_01_MD_PO_SCHED_LINE_DELV
+    - pipelines/SAP_01_md_matl_dstn_chn
+    - pipelines/SAP_MD_SUP_PRCHSNG_ORG
     - pipelines/MD_SLS_ORDR_SCHED_LINE_DELV_1
     - pipelines/SAP_RSEG
     - pipelines/SAP_MD_MATL_LOC_TAI_MRS_P01_HCS_BWI_GEU_SVS_MBP_FSN_02
+    - pipelines/MD_MFG_ORDER_ITM
+    - pipelines/SAP_MD_MFG_ORDER_BBA_FSN
+    - pipelines/SAP_MD_MATL_VALUT
     - pipelines/SAP_01_MD_SLS_ORDR_LINE_TAI
+    - pipelines/MD_BOM_ITM_NODE_7
     - pipelines/MD_MATL_ALT_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
     - pipelines/SAP_MD_MATL_INV_TAI
     - pipelines/SAP_MD_DELV_LINE_BWI_TAI
@@ -11315,9 +11324,11 @@ jobs:
     - pipelines/SAP_MD_BOM_HDR_ATL_BBL_BWI_FSN_GEU_MBP_P01_SVS_TAI
     - pipelines/SAP_01_MD_SLS_DOC_PTNR_FUNC
     - pipelines/SAP_01_MD_CUST_HCS
+    - pipelines/SAP_MD_CO_CD_TAI
     - pipelines/SAP_01_MD_SLS_ORDR_TAI
     - pipelines/SAP_MD_MATL_BOM
     - pipelines/SAP_MD_MATL_MVMT_HDR
+    - pipelines/SAP_MD_OWN_EXPLN_FOR_TERM_OF_PMT
     - pipelines/SAP_MD_CRNCY_BBN_P01_HCS_TAI_BBL_GEU_MBP_FSN_MRS_HM2
     jobClusterMode:
       clusterMode:
@@ -11325,7 +11336,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:16:30'
-    modifiedAt: '2023-05-31 03:00:31'
+    modifiedAt: '2023-06-20 23:25:34'
     author: smille29@its.jnj.com
   jobs/DEV_VST_PIPELINE_JOB:
     name: VST_PIPELINE_JOB
