JEKT-2742 - 🔁 Modified - HM2 Job updated with Release 4 Pipelines     - Job        - HM2_PIPELINE_JOB

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -12237,27 +12237,37 @@ jobs:
       onFailure: false
     pipelines:
     - pipelines/SAP_01_MD_PLNT
+    - pipelines/MD_BOM_ITM_NODE_8
     - pipelines/SAP_01_MD_SLS_ORDR_LINE_hmd
+    - pipelines/SAP_MD_MFG_ORDER_ATL_BBL_BBN_BWI_HM2_HMD_MBP_MRS_P01_SVS
     - pipelines/SAP_01_MD_BILL_DOC_HDR
     - pipelines/SAP_01_MD_MATL_INV
     - pipelines/MD_SUP_11
+    - pipelines/SAP_MD_MATL_VALUT_HIST
+    - pipelines/SAP_01_md_matl_dstn_chn_bwi_hmd_hm2
+    - pipelines/SAP_01_MD_BTCH
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST
     - pipelines/MD_SLS_ORDR_SCHED_LINE_DELV_10
     - pipelines/SAP_01_MD_SLS_ORDR_HMD
+    - pipelines/SAP_MD_CO_CD_HMD
     - pipelines/SAP_01_MD_PO_SCHED_LINE_DELV
+    - pipelines/SAP_MD_SUP_PRCHSNG_ORG
     - pipelines/MD_DELV_10
     - pipelines/SAP_MD_DELV_LINE_HM2
     - pipelines/SAP_MD_MATL_MVMT_HDR_HMD
     - pipelines/SAP_RSEG
     - pipelines/SAP_MD_MATL_HM2
+    - pipelines/SAP_MD_MATL_VALUT
     - pipelines/MD_MATL_ALT_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
     - pipelines/SAP_MD_SLS_DOC_PTNR_FUNC_HM2
     - pipelines/SAP_01_MD_SHIP_SVS
     - pipelines/SAP_01_MD_SER_NUM_STOCK_SGMNT
     - pipelines/MD_SAP_MATL_UOM_MBP_SVS_P01_HCS_HMD
+    - pipelines/MD_SUP_CO_1
     - pipelines/MD_PRCH_DELV_CNFRMS_12
     - pipelines/SAP_MD_BOM_HDR_ATL_BBL_BWI_FSN_GEU_MBP_P01_SVS_TAI
     - pipelines/SAP_MD_MATL_BOM
+    - pipelines/SAP_MD_OWN_EXPLN_FOR_TERM_OF_PMT
     - pipelines/SAP_MD_MATL_LOC_HMD
     - pipelines/SAP_MD_CRNCY_BBN_P01_HCS_TAI_BBL_GEU_MBP_FSN_MRS_HM2
     jobClusterMode:
@@ -12266,7 +12276,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-04-26 20:17:30'
-    modifiedAt: '2023-05-31 02:53:02'
+    modifiedAt: '2023-06-20 23:34:27'
     author: smille29@its.jnj.com
   jobs/JOB_MD_SLS_DOC_PTNR_FUNC_HM2:
     name: JOB_MD_SLS_DOC_PTNR_FUNC_HM2
