JEKT-2742 - 🔁 Modified - Updated HM2 Job per Peer Review findings on two Pipeline settings     - Job        - HM2_PIPELINE_JOB

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -12347,6 +12347,7 @@ jobs:
     - pipelines/SAP_01_MD_BTCH
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST
     - pipelines/MD_SLS_ORDR_SCHED_LINE_DELV_10
+    - pipelines/SAP_MD_MFG_ORDER_ITM_HM2_HMD
     - pipelines/SAP_01_MD_SLS_ORDR_HMD
     - pipelines/SAP_MD_CO_CD_HMD
     - pipelines/SAP_01_MD_PO_SCHED_LINE_DELV
@@ -12375,7 +12376,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-04-26 20:17:30'
-    modifiedAt: '2023-06-21 16:43:36'
+    modifiedAt: '2023-06-21 18:52:18'
     author: smille29@its.jnj.com
   jobs/JOB_MD_SLS_DOC_PTNR_FUNC_HM2:
     name: JOB_MD_SLS_DOC_PTNR_FUNC_HM2
