JEKT-2182 Update to HM2/HMD Pipeline 🔁 Modified     - Pipeline        - SAP_MD_SLS_DOC_HIER_HM2     - Dataset        - MD_SLS_DOC_HIER        - DS_SAP_01_VBAK        - DS_SAP_01_VBFA

--- a/src/datasets/DS_SAP_01_VBFA/pbt_aspects.yml
+++ b/src/datasets/DS_SAP_01_VBFA/pbt_aspects.yml
@@ -2,14 +2,14 @@ version: 1
 schema:
   type: struct
   fields:
-  - name: _deleted_
+  - name: MANDT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: VBTYP_N
+  - name: RUUID
     type: string
     nullable: true
     metadata:
@@ -23,14 +23,14 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: VBELN
+  - name: POSNV
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: POSNV
+  - name: VBELN
     type: string
     nullable: true
     metadata:
@@ -44,7 +44,7 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: MANDT
+  - name: VBTYP_N
     type: string
     nullable: true
     metadata:
@@ -136,13 +136,6 @@ schema:
       mappings: []
       tags: []
   - name: PLART
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: STUFE
     type: string
     nullable: true
     metadata:
@@ -296,14 +289,14 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: VBTYPEXT_V
+  - name: STUFE
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: VBTYPEXT_N
+  - name: _DATAAGING
     type: string
     nullable: true
     metadata:
@@ -345,7 +338,7 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: _infa_bigint_sequence_
+  - name: _deleted_
     type: string
     nullable: true
     metadata:
