--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -12618,6 +12618,29 @@ jobs:
     enabled: null
     createdAt: '2023-04-26 17:13:45'
     author: skostadi@its.jnj.com
+  jobs/JOB_MD_DOC_ITM_INCM_INVC_V2:
+    name: JOB_MD_DOC_ITM_INCM_INVC_V2
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Medium_D12_10
+    scheduleCron: 0 0 0 ? * 1 *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines: []
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-06-23 19:06:17'
+    author: ahorberg@its.jnj.com
 functions:
   author: null
   createdAt: '2023-03-24 15:42:34'
