JEKT-2182 Peer Review adjustments in progress #1 🔁 Modified     - Pipeline        - SAP_MD_SLS_DOC_HIER_HMD        - JDE_MD_SLS_DOC_HIER_GMD_BW2_DEU_DJD_JEM_JET_JSW_MTR_SJD_JES

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -3976,7 +3976,7 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/SAP_MD_SLS_DOC_HIER_HM2:
-    name: SAP_MD_SLS_DOC_HIER_HM2
+    name: SAP_MD_SLS_DOC_HIER_HMD
     description: ''
     author: mbolado1@its.jnj.com
     mode: batch
