manifest-advanced.yaml edited online with Bitbucket
Adding appid to fix unstable buid issues.

--- a/manifest-advanced.yaml
+++ b/manifest-advanced.yaml
@@ -1,6 +1,21 @@
 # Pipeline details across environments (defaults)
 common:
   pipelineType: app-dev
+  
+enviroments:
+  DEV:
+    cmdb:
+      appid: APP000010036912
+      deploymentEnviroment: development
+  QA:
+    cmdb:
+      appid: APP000010036913
+      deploymentEnviroment: qa
+  PROD:
+    cmdb:
+      appid: APP000010036914
+      deploymentEnviroment: production
+  
   debug: true
   gitversion:
     dockerImage: jnj.artifactrepo.jnj.com/jpm/gitversion:5
