manifest-advanced.yaml edited online with Bitbucket
Adding CMDB appid to fix unstable builds.

--- a/manifest-advanced.yaml
+++ b/manifest-advanced.yaml
@@ -2,20 +2,6 @@
 common:
   pipelineType: app-dev
   
-enviroments:
-  DEV:
-    cmdb:
-      appid: APP000010036912
-      deploymentEnviroment: development
-  QA:
-    cmdb:
-      appid: APP000010036913
-      deploymentEnviroment: qa
-  PROD:
-    cmdb:
-      appid: APP000010036914
-      deploymentEnviroment: production
-  
   debug: true
   gitversion:
     dockerImage: jnj.artifactrepo.jnj.com/jpm/gitversion:5
@@ -149,6 +135,10 @@ environments:
   ############# BETA
   ###################################
   BETA:
+      cmdb:
+        appid: APP000010036912
+        deploymentEnviroment: development
+     
     versionCalculation:
       enabled: true
       type: gitversion
@@ -202,6 +192,9 @@ environments:
   ############# PQA
   ###################################
   PQA:
+     cmdb:
+        appid: APP000010036912
+        deploymentEnviroment: pqa
 
     ##This step is to be executed Manually as we need to specify the user story under test and the test execution which will be used
     regressionTest:
@@ -311,6 +304,9 @@ environments:
   ############# QA
   ###################################
   QA:
+    cmdb:
+      appid: APP000010036913
+      deploymentEnviroment: qa
 
     buildParameters:
       moveToComplete:
@@ -363,6 +359,9 @@ environments:
   ############# PROD
   ###################################
   PROD:
+    cmdb:
+      appid: APP000010036914
+      deploymentEnviroment: production
     versionCalculation:
       enabled: true
       type: gitversion
