--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1,6 +1,6 @@
 name: CDL_MD_L1
 description: Project for storing MD L1 pipelines - tied to JEKT
-version: JEKT-2500
+version: latencyTestnew1.0
 author: skostadi@its.jnj.com
 language: python
 buildSystem: ''
@@ -12621,13 +12621,18 @@ jobs:
     enabled: null
     createdAt: '2023-04-26 17:13:45'
     author: skostadi@its.jnj.com
+gemContainer:
+  languageVersion: '3.10'
+  gemLibsVersion: 1.3.4.0
+  gems: {}
+  dependencies: null
 functions:
   author: null
   createdAt: '2023-03-24 15:42:34'
-  gems: {}
   udfs: {}
   udafs: {}
   expressions: {}
+  airflowFunctions: {}
 subgraphs: {}
 sqlModels: {}
 sqlMacros: {}
@@ -12637,4 +12642,6 @@ sqlUnreferencedSources: {}
 sqlPipeline: null
 dependencies: []
 projectDependencies: {}
+flags:
+  shouldAddDefaultDependenciesIfAbsent: true
 pipelineConfigurations: {}
