--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1,6 +1,6 @@
 name: CDL_MD_L1
 description: Project for storing MD L1 pipelines - tied to JEKT
-version: latencyTestnew2.0
+version: latencyTestOld3.0
 author: skostadi@its.jnj.com
 language: python
 buildSystem: ''
@@ -12625,14 +12625,12 @@ gemContainer:
   languageVersion: '3.10'
   gemLibsVersion: 1.3.4.0
   gems: {}
-  dependencies: null
 functions:
   author: null
   createdAt: '2023-03-24 15:42:34'
   udfs: {}
   udafs: {}
   expressions: {}
-  airflowFunctions: {}
 subgraphs: {}
 sqlModels: {}
 sqlMacros: {}
@@ -12642,6 +12640,4 @@ sqlUnreferencedSources: {}
 sqlPipeline: null
 dependencies: []
 projectDependencies: {}
-flags:
-  shouldAddDefaultDependenciesIfAbsent: true
 pipelineConfigurations: {}
