--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1,6 +1,6 @@
 name: CDL_MD_L1
 description: Project for storing MD L1 pipelines - tied to JEKT
-version: latencyTestOld3.0
+version: fast1.0
 author: skostadi@its.jnj.com
 language: python
 buildSystem: ''
@@ -12625,12 +12625,14 @@ gemContainer:
   languageVersion: '3.10'
   gemLibsVersion: 1.3.4.0
   gems: {}
+  dependencies: null
 functions:
   author: null
   createdAt: '2023-03-24 15:42:34'
   udfs: {}
   udafs: {}
   expressions: {}
+  airflowFunctions: {}
 subgraphs: {}
 sqlModels: {}
 sqlMacros: {}
@@ -12640,4 +12642,6 @@ sqlUnreferencedSources: {}
 sqlPipeline: null
 dependencies: []
 projectDependencies: {}
+flags:
+  shouldAddDefaultDependenciesIfAbsent: true
 pipelineConfigurations: {}
